--- a/stylesheets/portfolio.css
+++ b/stylesheets/portfolio.css
@@ -42,7 +42,11 @@ div.content-item p:nth-of-type(1) {
   grid-area: link;
   text-align: right;
   padding-right: 1em;
+}
 
+div.content-item p:nth-of-type(2) {
+  grid-area: section-p;
+  line-height: 1.5;
 }
 
 div.content-item p:nth-of-type(1) a{
@@ -53,8 +57,4 @@ div.content-item p:nth-of-type(1) a{
 
 div.content-item p:nth-of-type(1):hover a{
   color: rgb(107, 170, 177);
-}
-
-div.content-item p:nth-of-type(2) {
-  grid-area: section-p;
 }
